tests/lowering/constructor-with-explicit-body.lushui
;; TEST fail check

data Container: Type =
    container = attachment
    attachment: Container = container
